Table align fix

--- a/components/NavigationMenu/index.css
+++ b/components/NavigationMenu/index.css
@@ -17,5 +17,5 @@ table, th, td {
 
 th, td {
     padding: 15px;
-    text-align: left;
+    text-align: center;
 }
